--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Brush -->
       <div class="brush tool">
         <i class="fas fa-brush" id="brush" title="Brush"></i>
-        <input type="color" />
+        <input class="jscolor" value="000000" id="brush-color" />
         <span class="size" id="brush-size" title="Brush Size">10</span>
         <input
           type="range"
@@ -33,7 +33,7 @@
       <!-- Bucket -->
       <div class="bucket tool">
         <i class="fas fa-fill-drip" title="Background Color"></i>
-        <input type="color" />
+        <input class="jscolor" value="ffffff" id="bucket-color" />
       </div>
       <!-- Eraser -->
       <div class="tool">
@@ -62,7 +62,12 @@
         </a>
       </div>
     </div>
+    <!-- Mobile Message -->
+    <div class="mobile-message">
+      <h2>Please use application on larger screen</h2>
+    </div>
     <!-- Script -->
+    <script src="scripts/jscolor.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
